# UBL-Cloudfare-Chip-as-Code

./: .gitignore  BLUEPRINT_13_IMPLEMENTATION.md  Blueprint 01 — Edge Gateway (Worker + Ch.md  Blueprint 02 — Policy-Proxy (LAB 256).md  Blueprint 03 — Core API (Axum).md  Blueprint 04 — Files -R2.md  Blueprint 05 — Webhooks (parceiros), dir.md  Blueprint 06 — Identity & Access (Gateway).md  Blueprint 08 — Office: RoomDO (WebSocket).md  Blueprint 09 — Observabilidade & Auditor.md  Blueprint 10 — Media & Video (Upload • Live • Playback) — OMNI-ready.md.md  Blueprint 14 — Billing:Quota & Plans (P1).md   Blueprint 17 — Multitenant (Gateway + Po.md  CLEANUP.md  Cargo.toml  DEPLOY.md  DEPLOY_ITEM1_FILES_R2.md  DEPLOY_P0.md  DEPLOY_P0_EXECUTABLE.md  DEPLOY_P0_FINAL.md  DEPLOY_STATUS.md  Makefile  QUICK_DEPLOY.md  README.md  RUNBOOK_ACCESS_APPS.md  RUNBOOK_P0_VOULEZVOUS.md  SECURITY.md  env.example  smoke_chip_as_code.sh
apps/core-api/: Cargo.toml
apps/core-api/src/: main.rs
apps/core-api/src/atomic/: mod.rs
apps/core-api/src/auth/: jwks.rs  mod.rs  token_mgr.rs
apps/core-api/src/http/: mod.rs
apps/core-api/src/tokens/: abac.rs  mint.rs  mod.rs  refresh.rs  revoke.rs
apps/gateway/: Cargo.toml  README.md
apps/gateway/src/: main.rs
apps/gateway/src/http/: mod.rs  routes_auth.rs  routes_tokens.rs
apps/gateway/src/identity/: abac.rs  access.rs  csrf.rs  mod.rs  storage.rs  tokens.rs
apps/gateway/src/internal/: verify.rs
apps/gateway/src/mcp/: mod.rs  router.rs  server.rs  session.rs  types.rs
apps/media-api-worker/: README.md  package.json  schema.sql  wrangler.toml
apps/messenger/: BUILD_REPORT.txt  PATCH_README.md  README_POLISH.md  apply_patch.sh  index.patch.css
apps/office/: DEPLOY_CHECKLIST.md  DEPLOY_OFFICE.md  DEPLOY_QUICK.md  ESTRUTURA.md  IMPLEMENTACAO_COMPLETA.md  MAPEAMENTO_FONTES.md  MCP.md  MCP_DEPLOY.md  QUALIDADE_RESUMO.md  README.md  RELATORIO_QUALIDADE.md  RESUMO_CONSOLIDACAO.md  STATUS.md  VERIFICACAO_IMPORTACOES.md  r2-layout.txt  tenants.example.json
apps/quota-do/: package.json  wrangler.toml
apps/webhooks-worker/: package.json  tsconfig.json  wrangler.toml
billing-quota-skeleton-v1/: README.md
billing-quota-skeleton-v1/examples/: billing.http
crates/policy-engine/: Cargo.toml
crates/policy-engine/examples/: ubl_core_v1.yaml
crates/policy-proxy/: Cargo.toml
crates/policy-signer/: Cargo.toml
crates/policy-signer/src/: main.rs
docs/: ADR-001-policy-versioning.md  ARCHITECTURE.md  GO_LIVE_CHECKLIST.md  MIGRATION_PLAN.md  QUICKSTART.md  QUICK_SETUP.md  REORGANIZATION_PHASE2.md  REORGANIZATION_PLAN.md  structure.md
docs/architecture/: constitution.md
docs/blueprints/: 007-messenger-pwa--mcp-clie.md  12-admin--operaes-p0-pa.md  13-streaming-broadcast-omni-ubl.md  15-data--schemas-jsonatom.md  16-constituio--anexos-of.md  Office
docs/deploy/: MESSENGER_DEPLOY_SUMMARY.md  MESSENGER_NEXT_STEPS.md  p0-next.md  p0-p1.md  priority.md
docs/go-live/: ACCESS_REUSABLE_POLICIES.md  ACCESS_SETUP_TROUBLESHOOTING.md  GO_LIVE_EXECUTABLE.md  OFFICE_LLM_INTEGRATION.md  ROLLBACK.md  UBL_ID_OFFICE_GOLIVE.md  ZERO_TRUST_BOOTSTRAP.md
docs/guides/: access-apps-setup.md  git-setup.md  next-steps.md  soak-plan.md
docs/migration/: ROUTE53_EXPORT_SUMMARY.md  ROUTE53_TO_CLOUDFLARE.md
docs/papers/: Paper III_ TDLN — The Logical Atom & Compiler Specification.mdx  Paper II_ JSON✯Atomic — The Cryptographic Atom.mdx  Paper IV_ SIRP — The Network Atom.mdx  Paper I_ The LogLine Protocol — The Conceptual Atom of Verifiable Action-2.mdx  Paper VI_ UBL — The Economic Infrastructure & The Product.mdx  Paper V_ Chip as Code — Redefining Computing as Protocol.mdx
docs/runbooks/: p0-multitenant.md
docs/status/: AUTH_P0_IMPLEMENTATION.md  AUTH_STATUS.md  UBL_ID_INTEGRATION_COMPLETE.md  UBL_ID_KIT_COMPARISON.md  blueprint-changes.md  blueprint-status.md  cloudflare-deployed.md  deploy.md  p0-checklist.md  p1.1-rtc.md  status.md
docs/voulezvous/: ACCESS_APPS_VVZ.md  OMNI-MODES.md  README.md
infra/: deploy.sh
nova_policy_rs/: BUILD_WASM.md  CUTOVER_CHECKLIST.md  Cargo.toml  DEPLOYMENT.md  README.md  setup.sh
observability-starter-kit/: README.md
policies/: ubl_core_v1.yaml  ubl_core_v3.yaml  vvz_core_v1.yaml
policy-keygen/: Cargo.toml  README.md
policy-pack/: Cargo.toml  policy.yaml
policy-pack/src/: main.rs
proxy/: Cargo.toml
proxy/src/: main.rs
rtc-worker/: package.json
schemas/: README.md  atomic.schema.json  auth_p0.sql  ledger.media.ingest.completed.schema.json  ledger.media.ingest.started.schema.json  ledger.media.playback.granted.schema.json  ledger.media.retention.applied.schema.json  ledger.media.upload.presigned.schema.json  ledger.office.event.schema.json  ledger.office.handover.schema.json  ledger.office.tool_call.schema.json  media.descriptor.v1.json  stream.session.v1.json
scripts/: add-secrets-via-dashboard.md  add-worker-secrets.sh  build-proxy.sh  build-worker.sh  cloudflare-import-dns.sh  create-access-apps-with-permissions.md  create-access-apps.sh  deploy-billing.sh  deploy-messenger-pages.sh  deploy-observability.sh  deploy-office-complete.sh  deploy-office-llm.sh  deploy-p0-core.sh  deploy-phase2-test.sh  deploy-phase3.sh  deploy-ubl-id.sh  disable-r2-cors.sh  discover-access.sh  discover-vvz-zone.sh  enable-r2-cors-api.sh  enable-r2-cors.sh  go-live-execute.sh  import-all-domains.sh  migrate-office-files.sh  patch-office-for-ubl-agency.sh  publish.sh  register-messenger-mcp.sh  reorganize-phase2.sh  reorganize.sh  route53-to-cloudflare.sh  runbook_p0_voulezvous.sh  setup-access-reusable-policies.sh  setup-r2-cors-dashboard.sh  setup-r2-cors.sh  smoke-auth.sh  smoke-es256.sh  smoke-media-stage.sh  smoke-messenger-complete.sh  smoke-office-llm.sh  smoke-p0-p1.sh  (+9 more)
tdln-core/: Cargo.toml
tdln-core/src/: lib.rs  wasm.rs
templates/: CONFORMITY_P0.md  README.md  abac.policy.json  app.manifest.yaml  app.wiring.yaml  mcp.manifest.json
vvz-core-systemd-pack/: README-vvz-core-systemd.txt  cloudflared-vvz-core.service  install-vvz-core.sh  vvz-core.service
worker/: package.json  tsconfig.json  wrangler.toml
(+291 files in other folders)
