[workspace]
members = [
    "policy-engine",
    "policy-proxy",
    "policy-signer",
    "policy-keygen",
    "apps/gateway",
    "apps/core-api",
]
# Binários adicionais do core-api
[workspace.metadata]
default-members = [
    "policy-engine",
    "policy-proxy",
    "policy-signer",
    "policy-keygen",
    "apps/gateway",
    "apps/core-api",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
