[workspace]
members = [
    "crates/policy-engine",
    "crates/policy-proxy",
    "crates/policy-signer",
    "crates/policy-keygen",
    "apps/gateway",
    "apps/core-api",
]
# Binários adicionais do core-api
[workspace.metadata]
default-members = [
    "crates/policy-engine",
    "crates/policy-proxy",
    "crates/policy-signer",
    "crates/policy-keygen",
    "apps/gateway",
    "apps/core-api",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
