[package]
name = "policy-pack-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pack-builder"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.21"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
rand = "0.8"
