[package]
name = "ubl-policy-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ubl-policy-proxy"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"
tdln-core = { path = "../tdln-core" }
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.21"
hex = "0.4"
chrono = "0.4"
tokio-stream = "0.1"
lazy_static = "1.4"
