[package]
name = "core-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
# JWKS (ES256)
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pkcs8 = { version = "0.13", features = ["pem"] }
base64 = { version = "0.22", features = ["engine"] }
blake3 = "1.5"
hex = "0.4"
# JWT
jsonwebtoken = { version = "9", features = ["ec"] }
uuid = { version = "1", features = ["v4"] }
# HTTP client para auth-worker
reqwest = { version = "0.11", features = ["json"] }
# HMAC para refresh tokens
hmac = "0.12"
sha2 = "0.10"