[package]
name = "policy-signer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "policy-signer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
base64 = "0.22"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
